eval_intern.h
@@ -31,27 +31,6 @@
 #include <crt_externs.h>
 #endif
 
-/* Make alloca work the best possible way.  */
-#ifdef __GNUC__
-# ifndef atarist
-#  ifndef alloca
-#   define alloca __builtin_alloca
-#  endif
-# endif	/* atarist */
-#else
-# ifdef HAVE_ALLOCA_H
-#  include <alloca.h>
-# else
-#  ifdef _AIX
-#pragma alloca
-#  else
-#   ifndef alloca		/* predefined by HP cc +Olibcalls */
-void *alloca();
-#   endif
-#  endif /* AIX */
-# endif	/* HAVE_ALLOCA_H */
-#endif /* __GNUC__ */
-
 #ifndef HAVE_STRING_H
 char *strrchr(const char *, const char);
 #endif
